# gemini_gui_app

./: .env.sample  .gitignore  README.md  pyproject.toml
chat-app/: README.md  main.py
